--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">CoolWeather</string>
+    <string name="app_name">酷尔天气</string>
     <string name="life_suggtion_1">生活建议</string>
 </resources>
